--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body::-webkit-scrollbar {
 
 body {
   scrollbar-width: thin;
-  scrollbar-color: rebeccapurple grey;
+  scrollbar-color: #9333ea grey;
 }
 
 body::-webkit-scrollbar-track {
@@ -21,7 +21,14 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: rebeccapurple;
+  background-color: #9333ea;
   border-radius: 6px;
   border: 3px solid black;
+}
+
+input[type="range"] {
+  margin: 18px 0;
+  width: 100%;
+  background: #0f0f0f;
+  accent-color: #9333ea;
 }
