--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   background-color: #0f0f0f;
   color: #f0f8ff;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body::-webkit-scrollbar {
